# rag-estado-peru

./: .env.example  DEBUG_RAG_STATUS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/samples/: .gitkeep
docs/: KNOWLEDGE_BASE.md
scripts/: build_eval_set.py  debug_chunks.py  eval_run.py  ingest.py  query.py  test_pipeline.py
services/api/: __init__.py  main.py  schemas.py
tests/: test_api_smoke.py
